# aoc-2021

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  LICENSE  README.adoc  archive.html  build.gradle  feed.xml  index.gsp  index.html  settings.gradle  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages.yml
about/: index.html
day00/cpp/jindalabhishek1/: README.adoc  hello  hello.cpp
day00/javascript/subesokun/: README.adoc  solution.js
day00/kotlin/RJPlog/: README.adoc  day2100.kts  day2100_puzzle_input.txt
day00/python/anoff/: README.adoc  solution.py  solution_test.py
day00/python/fallshare/: README.adoc
day00/python/jamhocken/: README.adoc
day00/python/quajak/: README.adoc
day00/python/t-pi/: README.adoc  solution.py
day00/ruby/mr-kaffee/: README.adoc  solution.rb  solution_test.rb
day00/rust/dfriedenberger/: Cargo.toml  README.adoc
day00/rust/mr-kaffee/: Cargo.toml  README.adoc
day00/rust/mr-kaffee/src/: lib.rs  main.rs
day01/c/jindalabhishek1/: README.adoc  part1  part1.c  part2  part2.c
day01/go/razziel89/: README.adoc  solution.go  utils.go
day01/groovy/uniqueck/: README.adoc  SonarSweep.groovy  SonarSweepTest.groovy
day01/javascript/subesokun/: README.adoc  input.txt  solution.js
day01/kotlin/RJPlog/: README.adoc  day2101_1_2.kts  description.adoc
day01/python/anoff/: README.adoc  solution.py  (+1 more)
day11/kotlin/: day2111_list.kt
day12/kotlin/: day2112_1_2.kts
news/: 2019-11-29-one-docs-as-code.html  2019-12-07-pair-programming.html  2019-12-13-test-first.html  index.html
profiles/: docToolchain.adoc  mr-kaffee.adoc  subesokun.adoc  t-pi.adoc  uniqueck.adoc
rules/: index.html
solutions/: byCoder.html  byDay.html  byLanguage.html  index.html
src/docs/: index.adoc  learned.adoc
src/site/: jbake.properties
tags/: asciidoc.html  docs-as-code.html  index.html  tdd.html
tests/: index.html
(+763 files in other folders)
